Finished WPF project

--- a/ListaZadanGUI/MainWindow.xaml
+++ b/ListaZadanGUI/MainWindow.xaml
@@ -5,6 +5,6 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ListaZadanGUI"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Tasks List" Height="450" Width="800">
     <ContentControl x:Name="MainWindowContentControl" />
 </Window>
