--- a/ListaZadanGUI/ManageSubTaskWindow.xaml
+++ b/ListaZadanGUI/ManageSubTaskWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="ListaZadanGUI.ManageTaskWindow"
+﻿<Window x:Class="ListaZadanGUI.ManageSubTaskWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:ListaZadanGUI"
         mc:Ignorable="d"
         Loaded="Window_Loaded"
-        Title="Add task" Height="300" Width="400">
+        Title="Add subtask" Height="300" Width="400">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -14,7 +14,6 @@
         </Grid.RowDefinitions>
         <Grid Margin="5" Grid.Row="0">
             <Grid.RowDefinitions>
-                <RowDefinition Height="auto"/>
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="*"/>
@@ -26,7 +25,6 @@
 
             <Label Grid.Row="0" Grid.Column="0" Margin="0, 0, 0, 5">Name:</Label>
             <Label Grid.Row="1" Grid.Column="0" Margin="0, 0, 0, 5">End Date:</Label>
-            <Label Grid.Row="2" Grid.Column="0" Margin="0, 0, 0, 5">Priority:</Label>
             <Label Grid.Row="3" Grid.Column="0" Margin="0, 0, 0, 5">Description:</Label>
             <TextBox Grid.Row="0" Grid.Column="1" x:Name="TitleTextBox" Margin="0, 0, 0, 5"></TextBox>
             <WrapPanel Grid.Row="1" Grid.Column="1" Margin="0, 0, 0, 5">
@@ -34,8 +32,7 @@
                 <Label x:Name="IsDoneLabel" Visibility="Hidden">Done:</Label>
                 <CheckBox x:Name="IsDoneCheckBox" Visibility="Hidden" VerticalAlignment="Center"/>
             </WrapPanel>
-            <ComboBox Grid.Row="2" Grid.Column="1" x:Name="PriorityComboBox" Margin="0, 0, 0, 5" HorizontalAlignment="Left"/>
-            <TextBox Grid.Row="3" Grid.Column="1" x:Name="DescriptionTextBox" AcceptsReturn="True" AcceptsTab="True"></TextBox>
+            <TextBox Grid.Row="2" Grid.Column="1" x:Name="DescriptionTextBox" Margin="0, 0, 0, 5" AcceptsReturn="True" AcceptsTab="True"></TextBox>
         </Grid>
         <WrapPanel Grid.Row="1" Margin="0, 0, 0, 5" HorizontalAlignment="Center">
             <Button x:Name="OKButton" Click="OKButton_Click" Padding="10, 5" Margin="0, 0, 5, 0">OK</Button>
